[package]
name = "ccash-market"
version = "0.0.0"
edition = "2021"
authors = ["Samuel Boyden <sam@stboyden.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.1"
ccash-rs = { version = "2.0.0-beta", features = [
    "interpret_endpoint_errors_as_false",
] }
# ccash-rs = { path = "../ccash-rs" }
chrono = "0.4.23"
ctrlc = { version = "3.2.4", features = ["termination"] }
dashmap = { version = "5.4.0", features = ["serde", "rayon"] }
directories = "4.0.1"
flate2 = "1.0.25"
once_cell = "1.16.0"
parking_lot = { version = "0.12.1", features = ["serde", "send_guard"] }
rayon = "1.6.1"
serde = { version = "1.0.151", features = ["derive", "rc"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["v4", "serde", "macro-diagnostics", "fast-rng"] }
